stoat/src/snapshots/stoat__test_harness__snapshot_move_right_styled.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: l
focused: #1 of 1
mode: normal
size: 30x5
---
[0m[36m┌────────────────────────────┐[0m
[0m[36m│hel[0m[7m[36ml[0m[36mo world[0m                 [0m[36m│[0m
[0m[36m│[0m                            [0m[36m│[0m
[0m[36m│[0m                            [0m[36m│[0m
[0m[36m└────────────────────────────┘[0m
