stoat/src/snapshots/stoat__test_harness__snapshot_multi_cursor_move_right.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: l
focused: #1 of 1
mode: normal
size: 20x6
---
[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m1[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52mab[0m[7m[38;2;250;250;250m[48;2;40;44;52mc[0m[38;2;250;250;250m[48;2;40;44;52m             [0m
[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m2[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52mdef             [0m
[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m1[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52mghi             [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                    [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                    [0m
[0m[38;2;40;44;52m[48;2;97;175;239m NOR [0m[38;2;250;250;250m[48;2;99;109;131m (unnamed) /tes[0m
