stoat/src/snapshots/stoat__test_harness__snapshot_open_json_file_highlights_styled.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: open_file
focused: #1 of 1
mode: normal
size: 40x6
---
[0m[36m┌──────────────────────────────────────┐[0m
[0m[36m│[0m[37m{[0m                                     [0m[36m│[0m
[0m[36m│  [0m[94m"a"[0m[37m:[0m[36m [0m[35m1[0m                              [0m[36m│[0m
[0m[36m│[0m[37m}[0m                                     [0m[36m│[0m
[0m[36m│[0m                                      [0m[36m│[0m
[0m[36m└──────────────────────────────────────┘[0m
