stoat/src/snapshots/stoat__test_harness__snapshot_open_markdown_file_highlights_styled.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: open_file
focused: #1 of 1
mode: normal
size: 40x6
---
[0m[36m┌──────────────────────────────────────┐[0m
[0m[36m│[0m[1m[7m[96m#[0m[1m[96m Title[0m                               [0m[36m│[0m
[0m[36m│[0m                                      [0m[36m│[0m
[0m[36m│body[0m                                  [0m[36m│[0m
[0m[36m│[0m                                      [0m[36m│[0m
[0m[36m└──────────────────────────────────────┘[0m
